<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorMainBackground">

    <ImageView
        android:id="@+id/bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/belka" />

    <Button
        android:id="@+id/back_button"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:background="@drawable/arrowleft"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/barText"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginStart="52dp"
        android:layout_marginEnd="52dp"
        android:padding="2dp"
        android:text="@string/pages_stats"
        android:textAlignment="center"
        android:gravity="center"
        android:textColor="@color/colorMainBackground"
        app:autoSizeMaxTextSize="36dp"
        app:autoSizeMinTextSize="1dp"
        app:autoSizeStepGranularity="1dp"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--    <TextView-->
<!--        android:id="@+id/countrySelected"-->
<!--        android:layout_width="193dp"-->
<!--        android:layout_height="36dp"-->
<!--        android:text="Wybrany kraj:"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.495"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="0.058" />-->

    <androidx.appcompat.widget.AppCompatAutoCompleteTextView
        android:id="@+id/countryInputComplete"
        android:layout_width="337dp"
        android:layout_height="32dp"
        android:layout_marginTop="84dp"
        android:background="@drawable/imagestatserachbackground"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="@string/stat_hint"
        android:maxLength="30"
        android:singleLine="true"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="152dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/countryInputComplete">

        <LinearLayout
            android:id="@+id/stat_layoutconetnt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical"
            android:visibility="invisible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="2dp">

                <TextView
                    android:id="@+id/stats_text_country"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/stats_tablecolumn_country"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/stats_text_country_val"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/stat_default_loading"
                    android:textAlignment="viewEnd"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="2dp">

                <TextView
                    android:id="@+id/stats_text_allcases"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/stats_tablecolumn_allcases"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/stats_text_allcases_val"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/stat_default_loading"
                    android:textAlignment="viewEnd"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="2dp">

                <TextView
                    android:id="@+id/stats_text_newcases"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/stats_tablecolumn_newcases"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/stats_text_newcases_val"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/stat_default_loading"
                    android:textAlignment="viewEnd"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="2dp">

                <TextView
                    android:id="@+id/stats_text_alldeads"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/stats_tablecolumn_alldeads"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/stats_text_alldeads_val"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/stat_default_loading"
                    android:textAlignment="viewEnd"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="2dp">

                <TextView
                    android:id="@+id/stats_text_newdeath"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/stats_tablecolumn_newdeath"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/stats_text_newdeath_val"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/stat_default_loading"
                    android:textAlignment="viewEnd"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="2dp">

                <TextView
                    android:id="@+id/stats_text_allrecived"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/stats_tablecolumn_allrecived"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/stats_text_allrecived_val"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/stat_default_loading"
                    android:textAlignment="viewEnd"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="2dp">

                <TextView
                    android:id="@+id/stats_text_activecases"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/stats_tablecolumn_activecases"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/stats_text_activecases_val"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/stat_default_loading"
                    android:textAlignment="viewEnd"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="2dp">

                <TextView
                    android:id="@+id/stats_text_critical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/stats_tablecolumn_critical"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/stats_text_critical_val"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/stat_default_loading"
                    android:textAlignment="viewEnd"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="2dp">

                <TextView
                    android:id="@+id/stats_cases1m_country"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/stats_tablecolumn_cases1m"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/stats_text_cases1m_val"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/stat_default_loading"
                    android:textAlignment="viewEnd"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="2dp">

                <TextView
                    android:id="@+id/stats_text_death1m"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/stats_tablecolumn_death1m"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/stats_text_death1m_val"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/stat_default_loading"
                    android:textAlignment="viewEnd"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="2dp">

                <TextView
                    android:id="@+id/stats_text_alltest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/stats_tablecolumn_alltest"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/stats_text_alltest_val"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/stat_default_loading"
                    android:textAlignment="viewEnd"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="2dp">

                <TextView
                    android:id="@+id/stats_text_test1m"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/stats_tablecolumn_test1m"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/stats_text_test1m_val"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/stat_default_loading"
                    android:textAlignment="viewEnd"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="2dp">

                <TextView
                    android:id="@+id/stats_text_population"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/stats_tablecolumn_population"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/stats_text_population_val"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/stat_default_loading"
                    android:textAlignment="viewEnd"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="2dp">

                <TextView
                    android:id="@+id/stats_text_continent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/stats_tablecolumn_continent"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/stats_text_continent_val"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/stat_default_loading"
                    android:textAlignment="viewEnd"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>